[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[project]
name = "hexlet-code"
version = "0.2.0"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]