[project]
name = "hexlet-code"
version = "0.2.0"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["code/fix_blank_lines.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]